--- a/pom.xml
+++ b/pom.xml
@@ -941,6 +941,11 @@
                 <artifactId>axis2-client</artifactId>
                 <version>${axis2.client.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.nimbusds</groupId>
+                <artifactId>nimbus-jose-jwt</artifactId>
+                <version>${nimbusds.version}</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -1086,6 +1091,7 @@
 		<slf4j.version>1.7.0</slf4j.version>
 		<apache.openejb.version>4.5.2</apache.openejb.version>
         <axis2.client.version>1.6.1.wso2v11</axis2.client.version>
+        <nimbusds.version>2.26.1</nimbusds.version>
 		<project.scm.id>my-scm-server</project.scm.id>
     </properties>
 
