--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -131,7 +131,7 @@
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.provider.server.feature:${carbon.identity.version}</featureArtifactDef>
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.idp.mgt.feature:${carbon.identity.version}</featureArtifactDef>
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.relying.party.feature:${carbon.identity.version}</featureArtifactDef>
-								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.mgt.feature:${carbon.identity.version}</featureArtifactDef>
+								<!--<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.mgt.feature:${carbon.identity.version}</featureArtifactDef>-->
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.self.registration.feature:${carbon.identity.version}</featureArtifactDef>
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.user.profile.feature:${carbon.identity.version}</featureArtifactDef>
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.xacml.feature:${carbon.identity.version}</featureArtifactDef>
@@ -197,7 +197,7 @@
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.provisioning.connector.scim.server.feature:${carbon.identity.version}</featureArtifactDef>
 								<!-- SAML Request/Response Validator Toolkit Feature -->						
 				                                <featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.tools.saml.validator.feature:${carbon.identity.version}</featureArtifactDef>
-                                <featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.notification.mgt.feature:${carbon.identity.version}</featureArtifactDef>
+                                <!--<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.notification.mgt.feature:${carbon.identity.version}</featureArtifactDef>-->
 
 							</featureArtifacts>
 						</configuration>
@@ -358,10 +358,10 @@
                                     <id>org.wso2.carbon.idp.mgt.feature.group</id>
                                     <version>${carbon.identity.version}</version>
                                 </feature>
-								<feature>
-	                                <id>org.wso2.carbon.identity.mgt.feature.group</id>
-	                                <version>${carbon.identity.version}</version>
-		                        </feature>
+								<!--<feature>-->
+	                                <!--<id>org.wso2.carbon.identity.mgt.feature.group</id>-->
+	                                <!--<version>${carbon.identity.version}</version>-->
+		                        <!--</feature>-->
 								<feature>
 									<id>org.wso2.carbon.identity.relying.party.feature.group</id>
 									<version>${carbon.identity.version}</version>
@@ -429,10 +429,6 @@
 								</feature>
 
 								<!-- Features required for Cloud Identity -->
-								<feature>
-									<id>org.wso2.carbon.tenant.common.feature.group</id>
-									<version>${carbon.multitenancy.version}</version>
-								</feature>
 								<feature>
 									<id>org.wso2.identity.ui.feature.group</id>
 									<version>${product.identity.version}</version>
@@ -551,10 +547,10 @@
                                     <id>org.wso2.carbon.identity.thrift.authentication.feature.group</id>
                                     <version>${carbon.identity.version}</version>
                                 </feature>
-                                 <feature>
-                                    <id>org.wso2.carbon.identity.notification.mgt.feature.group</id>
-                                    <version>${carbon.identity.version}</version>
-                                 </feature>
+                                 <!--<feature>-->
+                                    <!--<id>org.wso2.carbon.identity.notification.mgt.feature.group</id>-->
+                                    <!--<version>${carbon.identity.version}</version>-->
+                                 <!--</feature>-->
 							</features>
 						</configuration>
 					</execution>
