--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -121,7 +121,7 @@
 								<featureArtifactDef>org.wso2.carbon.registry:org.wso2.carbon.registry.core.feature:${carbon.registry.version}</featureArtifactDef>
 								<featureArtifactDef>org.wso2.carbon.registry:org.wso2.carbon.registry.resource.properties.feature:${carbon.registry.version}</featureArtifactDef>
 								<featureArtifactDef>org.wso2.carbon.registry:org.wso2.carbon.registry.profiles.feature:${carbon.registry.version}</featureArtifactDef>
-								<featureArtifactDef>org.wso2.carbon.registry:org.wso2.carbon.registry.contentsearch.feature:${carbon.registry.version}</featureArtifactDef>
+								<!--<featureArtifactDef>org.wso2.carbon.registry:org.wso2.carbon.registry.contentsearch.feature:${carbon.registry.version}</featureArtifactDef>-->
 								<featureArtifactDef>org.wso2.carbon.registry:org.wso2.carbon.registry.ui.menu.feature:${carbon.registry.version}</featureArtifactDef>
 								<!-- Directory server related features -->
 								<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.directory.service.mgr.feature:${carbon.identity.version}</featureArtifactDef>
@@ -198,7 +198,7 @@
 								<!-- SAML Request/Response Validator Toolkit Feature -->						
 				                                <featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.tools.saml.validator.feature:${carbon.identity.version}</featureArtifactDef>
                                 <!--<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.notification.mgt.feature:${carbon.identity.version}</featureArtifactDef>-->
-
+								<!--<featureArtifactDef>org.apache.axis2.transport:org.apache.axis2.transport.mail.feature:${axis2-transports.version}</featureArtifactDef>-->
 							</featureArtifacts>
 						</configuration>
 					</execution>
@@ -430,6 +430,10 @@
 
 								<!-- Features required for Cloud Identity -->
 								<feature>
+									<id>org.wso2.carbon.tenant.common.feature.group</id>
+									<version>${carbon.multitenancy.version}</version>
+								</feature>
+								<feature>
 									<id>org.wso2.identity.ui.feature.group</id>
 									<version>${product.identity.version}</version>
 								</feature>
@@ -453,10 +457,10 @@
 									<!--<id>org.wso2.carbon.stratos.throttling.agent.feature.group</id>-->
 									<!--<version>2.2.0</version>-->
 								<!--</feature>-->
-   								<feature>
-                   					 <id>org.wso2.carbon.registry.contentsearch.feature.group</id>
-                                     <version>${carbon.registry.version}</version>
-                                </feature>
+   								<!--<feature>-->
+                   					 <!--<id>org.wso2.carbon.registry.contentsearch.feature.group</id>-->
+                                     <!--<version>${carbon.registry.version}</version>-->
+                                <!--</feature>-->
 								<!--<feature>-->
                    					 <!--<id>org.wso2.carbon.stratos.deployment.feature.group</id>-->
                                      <!--<version>2.2.1</version>-->
@@ -643,7 +647,7 @@
                                 <feature>
                                     <id>org.wso2.carbon.identity.core.server.feature</id>
                                     <version>4.2.2</version>
-                                </feature>                               
+                                </feature>
                                 <feature>
                                     <id>org.wso2.carbon.idp.mgt.server.feature</id>
                                     <version>4.2.2</version>
