--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<!-- ~ Copyright (c) 2005-2010, WSO2 Inc. (http://www.wso2.org) All Rights 
+<?xml version="1.0" encoding="utf-8"?>
+<!-- ~ Copyright (c) 2005-2010, WSO2 Inc. (http://www.wso2.org) All Rights
 	Reserved. ~ ~ WSO2 Inc. licenses this file to you under the Apache License, 
 	~ Version 2.0 (the "License"); you may not use this file except ~ in compliance 
 	with the License. ~ You may obtain a copy of the License at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 
@@ -271,8 +272,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.0</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+                    <encoding>UTF-8</encoding>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -1110,7 +1112,7 @@
 		<slf4j.version>1.7.0</slf4j.version>
 		<apache.openejb.version>4.5.2</apache.openejb.version>
         <axis2.client.version>1.6.1.wso2v11</axis2.client.version>
-        <axis2-transports.version>1.1.0-wso2v11-SNAPSHOT</axis2-transports.version>
+        <axis2-transports.version>1.1.0-wso2v12</axis2-transports.version>
         <nimbusds.version>2.26.1</nimbusds.version>
         <project.scm.id>my-scm-server</project.scm.id>
     </properties>
