--- a/modules/integration/tests-integration/tests-backend/src/test/resources/artifacts/IS/notification-mgt/config/entitlementNotificationMgt.properties
+++ b/modules/integration/tests-integration/tests-backend/src/test/resources/artifacts/IS/notification-mgt/config/entitlementNotificationMgt.properties
@@ -1,4 +1,22 @@
-#Wed Apr 08 23:32:44 EDT 2015
+#
+# Copyright (c) 2014, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+#
+#  WSO2 Inc. licenses this file to you under the Apache License,
+#  Version 2.0 (the "License"); you may not use this file except
+#  in compliance with the License.
+#  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+#  Unless required by applicable law or agreed to in writing,
+#  software distributed under the License is distributed on an
+#  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+#  KIND, either express or implied.  See the License for the
+#  specific language governing permissions and limitations
+#  under the License.
+#
+
+
 json.subscription.policyUpdate.endpoint.pepEndpoint1.username=admin
 email.subscription.userOperation.endpoint.privateMail.subject=User operation change information to private mail
 json.subscription.1=policyUpdate
