--- a/pom.xml
+++ b/pom.xml
@@ -1098,7 +1098,7 @@
         <axiom.wso2.version>1.2.11.wso2v5</axiom.wso2.version>
 		<carbon.automation.version>4.3.1</carbon.automation.version>
 		<carbon.automationutils.version>4.3.0</carbon.automationutils.version>
-		<charon.orbit.version>2.0.0-wso2v3-SNAPSHOT</charon.orbit.version>
+		<charon.orbit.version>2.0.0-wso2v2</charon.orbit.version>
 		<apache.wink.version>1.1.3-incubating</apache.wink.version>
 		<apache.ws.security.version>1.6.9</apache.ws.security.version>
 		<javax.servlet.version>2.5</javax.servlet.version>
