change carbon-identity to 4.3.4

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -199,7 +199,7 @@
 				                                <featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.tools.saml.validator.feature:${carbon.identity.version}</featureArtifactDef>
                                 <featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.notification.mgt.feature:${carbon.identity.version}</featureArtifactDef>
                                                                 <!-- User Account Connector Feature -->
-                                                                <!--<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.user.account.connector.feature:${carbon.identity.version}</featureArtifactDef>-->
+                                                                <featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.user.account.connector.feature:${carbon.identity.version}</featureArtifactDef>
 							</featureArtifacts>
 						</configuration>
 					</execution>
@@ -556,10 +556,10 @@
                                     <id>org.wso2.carbon.identity.notification.mgt.feature.group</id>
                                     <version>${carbon.identity.version}</version>
                                  </feature>
-                                 <!--<feature>-->
-                                    <!--<id>org.wso2.carbon.identity.user.account.connector.feature.group</id>-->
-                                    <!--<version>${carbon.identity.version}</version>-->
-                                 <!--</feature>-->
+                                 <feature>
+                                    <id>org.wso2.carbon.identity.user.account.connector.feature.group</id>
+                                    <version>${carbon.identity.version}</version>
+                                 </feature>
 							</features>
 						</configuration>
 					</execution>
