--- a/pom.xml
+++ b/pom.xml
@@ -1023,7 +1023,7 @@
 	</profiles>
 
 	<properties>
-		<carbon.identity.version>4.3.4-SNAPSHOT</carbon.identity.version>
+		<carbon.identity.version>4.3.3</carbon.identity.version>
         <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
 		<bcprov.jdk13.version>140</bcprov.jdk13.version>
 		<bcprov.jdk15.version>132</bcprov.jdk15.version>
@@ -1049,8 +1049,8 @@
         <jstl.version>1.1.2</jstl.version>
         <google.collect.wso2.version>1.0.0.wso2v1</google.collect.wso2.version>
         <junit.version>3.8.1</junit.version>
-		<carbon.kernel.version>4.4.0</carbon.kernel.version>
-        <carbon.commons.version>4.4.0</carbon.commons.version>
+		<carbon.kernel.version>4.3.0</carbon.kernel.version>
+        <carbon.commons.version>4.3.0</carbon.commons.version>
 		<carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
 		<orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
         <oauth2.client.version>0.22.1358727-wso2v8-SNAPSHOT</oauth2.client.version>
