Adding missed commits from is-5.1.0 svn branch

--- a/modules/samples/InfoRecoverySample/src/main/webapp/WEB-INF/web.xml
+++ b/modules/samples/InfoRecoverySample/src/main/webapp/WEB-INF/web.xml
@@ -245,7 +245,7 @@
     </context-param>
     <context-param>
         <param-name>trustStorePath</param-name>
-        <param-value>../keystores/wso2carbon.jks</param-value>
+        <param-value>/client-truststore.jks</param-value>
     </context-param>
     <context-param>
         <param-name>accessUsername</param-name>
