--- a/modules/samples/sso/SSOAgentSample/pom.xml
+++ b/modules/samples/sso/SSOAgentSample/pom.xml
@@ -19,6 +19,10 @@
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.sso.agent</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
