Updating pom files of product-is

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -199,7 +199,7 @@
 				                                <featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.tools.saml.validator.feature:${carbon.identity.version}</featureArtifactDef>
                                 <featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.notification.mgt.feature:${carbon.identity.version}</featureArtifactDef>
                                                                 <!-- User Account Connector Feature -->
-                                                                <!--<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.user.account.connector.feature:${carbon.identity.version}</featureArtifactDef>-->
+                                                                <!--<featureArtifactDef>org.wso2.carbon.identity:org.wso2.carbon.identity.user.account.association.feature:${carbon.identity.version}</featureArtifactDef>-->
 							</featureArtifacts>
 						</configuration>
 					</execution>
@@ -557,7 +557,7 @@
                                     <version>${carbon.identity.version}</version>
                                  </feature>
                                  <!--<feature>-->
-                                    <!--<id>org.wso2.carbon.identity.user.account.connector.feature.group</id>-->
+                                    <!--<id>org.wso2.carbon.identity.user.account.association.feature.group</id>-->
                                     <!--<version>${carbon.identity.version}</version>-->
                                  <!--</feature>-->
 							</features>
