--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -81,6 +81,7 @@
 			<plugin>
 				<groupId>org.wso2.maven</groupId>
 				<artifactId>carbon-p2-plugin</artifactId>
+				<version>1.5.4</version>
 				<executions>
 					<execution>
 						<id>2-p2-repo-generation</id>
