--- a/pom.xml
+++ b/pom.xml
@@ -1030,7 +1030,7 @@
 	</profiles>
 
 	<properties>
-		<carbon.identity.version>4.3.5-SNAPSHOT</carbon.identity.version>
+		<carbon.identity.version>4.4.1-SNAPSHOT</carbon.identity.version>
         <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
 		<bcprov.jdk13.version>140</bcprov.jdk13.version>
 		<bcprov.jdk15.version>132</bcprov.jdk15.version>
@@ -1042,12 +1042,12 @@
         <openid4java.consumer.version>0.9.6</openid4java.consumer.version>
         <opensaml.version>2.4.1</opensaml.version>
         <opensaml2.wso2.version>2.0.0.alpha1-wso2v1</opensaml2.wso2.version>
-        <wss4j.wso2.version>1.5.11.wso2v10-SNAPSHOT</wss4j.wso2.version>
+        <wss4j.wso2.version>1.5.11.wso2v10</wss4j.wso2.version>
         <openws.version>1.4.2</openws.version>
         <charon.version>2.0.0</charon.version>
         <xalan.version>2.7.1</xalan.version>
         <xalan.wso2.version>2.7.0.wso2v1</xalan.wso2.version>
-        <rampart.wso2.version>1.6.1.wso2v15-SNAPSHOT</rampart.wso2.version>
+        <rampart.wso2.version>1.6.1.wso2v14</rampart.wso2.version>
         <orbit.version.commons.httpclient>4.2.5.wso2v1</orbit.version.commons.httpclient>
         <commons.httpclient.version>3.1</commons.httpclient.version>
         <httpcore.wso2.version>4.1.3.wso2v1</httpcore.wso2.version>
@@ -1060,7 +1060,7 @@
         <carbon.commons.version>4.3.6-SNAPSHOT</carbon.commons.version>
 		<carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
 		<orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
-        <oauth2.client.version>0.22.1358727-wso2v8-SNAPSHOT</oauth2.client.version>
+        <oauth2.client.version>0.22.1358727-wso2v7</oauth2.client.version>
 		<orbit.version.axis2>1.6.1.wso2v11</orbit.version.axis2>
 		<stratos.version.221>2.2.1</stratos.version.221>
 		<stratos.version.220>2.2.0</stratos.version.220>
@@ -1076,7 +1076,7 @@
 		<version.commons.logging>1.1.1</version.commons.logging>
         <commons.lang.version>2.6</commons.lang.version>
         <emma.version>2.1.5320</emma.version>
-        <jaggeryjs.version>0.9.0</jaggeryjs.version>
+        <jaggeryjs.version>0.10.0</jaggeryjs.version>
         <stratos.version>2.2.0</stratos.version>
         <shindig.version>2.5.0-beta5</shindig.version>
         <ws.module.version>1.1.0</ws.module.version>
@@ -1096,23 +1096,23 @@
         <operadriver.version>0.8.1</operadriver.version>
         <selenium.version>2.40.0</selenium.version>
         <testng.version>6.1.1</testng.version>
-        <carbon.deployment.version>4.3.2-SNAPSHOT</carbon.deployment.version>
-        <carbon.registry.version>4.3.2-SNAPSHOT</carbon.registry.version>
-        <carbon.multitenancy.version>4.3.5-SNAPSHOT</carbon.multitenancy.version>
+        <carbon.deployment.version>4.4.0</carbon.deployment.version>
+        <carbon.registry.version>4.4.1</carbon.registry.version>
+        <carbon.multitenancy.version>4.4.0</carbon.multitenancy.version>
         <jaggery.extensions.version>1.2.0</jaggery.extensions.version>
         <axis2.jibx.wso2.version>1.6.1.wso2v11</axis2.jibx.wso2.version>
         <axis2.jaxb.wso2.version>1.6.1.wso2v11</axis2.jaxb.wso2.version>
         <axiom.wso2.version>1.2.11.wso2v5</axiom.wso2.version>
 		<carbon.automation.version>4.3.1</carbon.automation.version>
 		<carbon.automationutils.version>4.3.0</carbon.automationutils.version>
-		<charon.orbit.version>2.0.0-wso2v3-SNAPSHOT</charon.orbit.version>
+		<charon.orbit.version>2.0.0-wso2v3</charon.orbit.version>
 		<apache.wink.version>1.1.3-incubating</apache.wink.version>
 		<apache.ws.security.version>1.6.9</apache.ws.security.version>
 		<javax.servlet.version>2.5</javax.servlet.version>
 		<slf4j.version>1.7.0</slf4j.version>
 		<apache.openejb.version>4.5.2</apache.openejb.version>
         <axis2.client.version>1.6.1.wso2v11</axis2.client.version>
-        <axis2-transports.version>1.1.0-wso2v12</axis2-transports.version>
+        <axis2-transports.version>1.1.0-wso2v13</axis2-transports.version>
         <nimbusds.version>2.26.1</nimbusds.version>
         <project.scm.id>my-scm-server</project.scm.id>
     </properties>
