updating user association test cases

--- a/modules/integration/tests-common/admin-clients/pom.xml
+++ b/modules/integration/tests-common/admin-clients/pom.xml
@@ -67,7 +67,7 @@
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
-            <artifactId>org.wso2.carbon.identity.user.account.connector.stub</artifactId>
+            <artifactId>org.wso2.carbon.identity.user.account.association.stub</artifactId>
         </dependency>
     </dependencies>
 
