--- a/modules/integration/tests-integration/tests-backend/src/test/resources/artifacts/IS/notification-mgt/config/entitlementNotificationMgt.properties
+++ b/modules/integration/tests-integration/tests-backend/src/test/resources/artifacts/IS/notification-mgt/config/entitlementNotificationMgt.properties
@@ -1,26 +1,8 @@
-#
-# Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
-#
-#  WSO2 Inc. licenses this file to you under the Apache License,
-#  Version 2.0 (the "License"); you may not use this file except
-#  in compliance with the License.
-#  You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-#  Unless required by applicable law or agreed to in writing,
-#  software distributed under the License is distributed on an
-#  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-#  KIND, either express or implied.  See the License for the
-#  specific language governing permissions and limitations
-#  under the License.
-#
-
-
+#Thu Apr 30 18:34:44 IST 2015
 json.subscription.policyUpdate.endpoint.pepEndpoint1.username=admin
 email.subscription.userOperation.endpoint.privateMail.subject=User operation change information to private mail
+json.subscription.policyUpdate.jsonContentTemplate=/media/prasad/2043997A2DC5E381/workspace/git/product-is/modules/integration/tests-integration/tests-backend/src/test/resources//artifacts/IS/notification-mgt/templates/entitlement
 json.subscription.1=policyUpdate
-json.subscription.policyUpdate.jsonContentTemplate=/media/hasinthaindrajee/204c7dcd-f122-4bc5-9743-f46bcdf78f37/NMTests/product-is/modules/integration/tests-integration/tests-backend/src/test/resources//artifacts/IS/notification-mgt/templates/entitlement
 json.subscription.policyUpdate.endpoint.pepEndpoint1.AuthenticationRequired=true
 email.subscription.1=userOperation
 email.subscription.userOperation.salutation=Admin
