--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -82,7 +82,7 @@
 			<plugin>
 				<groupId>org.wso2.maven</groupId>
 				<artifactId>carbon-p2-plugin</artifactId>
-				<version>1.5.3</version>
+				<version>${carbon.p2.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>2-p2-repo-generation</id>
